# Axionara

./: .coveragerc  .env.example  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  config.yaml  docker-compose.yml  nginx.conf  poe_tasks.toml  pyproject.toml  semantic.toml
.github/: dependabot.yml
.github/docs/: development-en.md
.github/workflows/: build.yaml  main-ci.yaml  release.yml  test.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 20260507_0001_initial_schema.py  20260513_0002_dataset_upload_metadata.py
prompts/agent/: data_qa.md  data_qa_request.md  dataset_summary.md  system.md
scripts/: entrypoint.sh
src/axionara/: main.py
src/axionara/app/api/: deps.py  routers.py
src/axionara/app/api/endpoints/: admin_dataset.py  auth.py  catalog.py  chat.py  health.py  me.py  provider_dataset.py  session.py  tool.py  user.py
src/axionara/app/services/: access_service.py  analysis_service.py  catalog_rag_service.py  catalog_service.py  content_rag_service.py  dataset_qa_agent_service.py  dataset_qa_retrieval.py  dataset_service.py  export_service.py  inference_service.py  review_service.py  session_service.py  storage_service.py
src/axionara/app/utils/: constant.py  events.py  security.py
src/axionara/common/: config.py  decorator.py  logging.py  util.py
src/axionara/core/agent/: agent.py  base.py  context.py  factory.py  store.py
src/axionara/core/agent/tools/: get_public_dataset_profile.py  localtime.py  search_authorized_dataset_content.py  search_public_dataset_profiles.py
src/axionara/core/db/: models.py  session.py
src/axionara/core/db/crud/: __init__.py  crud_analysis.py  crud_dataset.py  crud_grant.py  crud_user.py  session_crud.py
src/axionara/core/model/: base.py  dataset.py  message.py  user.py
src/axionara/core/processing/: types.py
src/axionara/core/processing/analyzers/: simple.py
src/axionara/core/processing/cleaners/: simple.py
src/axionara/core/processing/extractors/: __init__.py  document.py
src/axionara/core/processing/hooks/: sensitivity.py
src/axionara/core/processing/parsers/: base.py  simple.py
src/axionara/core/prompt/: __init__.py  loader.py
src/axionara/core/storage/: __init__.py  base.py  local.py  minio.py
tests/: __init__.py  conftest.py  test_prompt_loader.py
tests/api/: test_agent.py  test_user.py
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: main.ts  vite-env.d.ts
web/src/api/: client.ts  services.ts  types.ts
web/src/app/: App.vue  router.ts
web/src/components/: AppShell.vue  ConfirmDialog.vue  DataCard.vue  EmptyState.vue  FileIngestor.vue  FloatingCopilot.vue  LoadingState.vue  MetricTile.vue  Modal.vue  SceneBackdrop.vue  StatusBadge.vue
web/src/pages/: Account.vue  AdminDashboard.vue  AdminDatasets.vue  AdminJobs.vue  AdminReviews.vue  Catalog.vue  CatalogDetail.vue  Home.vue  Login.vue  MeDashboard.vue  MeDatasetDetail.vue  MeExports.vue  NotFound.vue  ProviderDashboard.vue  ProviderUpload.vue  Register.vue
web/src/stores/: admin.ts  auth.ts  catalog.ts  me.ts  provider.ts  ui.ts
web/src/styles/: main.scss
web/src/utils/: datasetMetadata.ts  format.ts  statistics.ts
