[project]
name = "Axionara"
version = "0.0.1"
description = "一个支撑政务数据的可信数据基座，用于跨部门协同与价值挖掘"
authors = [{ name = "tropical-algae", email = "tropicalalgae@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
  "fastapi>=0.112.0,<0.113",
  "uvicorn==0.48.0",
  "pydantic[email]>=2.13.4,<3",
  "requests>=2.32.0,<3",
  "loguru>=0.7.0,<0.8",
  "pydantic-settings>=2.4.0,<3",
  "pytz~=2024.1",
  "pyyaml>=6.0.1,<7",
  "pymysql>=1.2.0,<2",
  "sqlalchemy>=2.0.32,<3",
  "passlib>=1.7.4,<2",
  "python-jose>=3.3.0,<4",
  "sqlmodel>=0.0.22,<0.0.23",
  "httpx[socks]>=0.28.1",
  "python-multipart>=0.0.29",
  "aiosqlite>=0.21.0",
  "llama-index>=0.14.7",
  "json-repair>=0.55.0",
  "asyncmy>=0.2.11",
  "cryptography>=46.0.3",
  "minio>=7.2.0,<8",
  "openpyxl>=3.1.5,<4",
  "markitdown[pdf]>=0.1.4,<0.2",
  "alembic>=1.16.0,<2",
]

[project.urls]
Repository = "https://github.com/tropical-algae/Axionara.git"


[dependency-groups]
dev = [
  "pytest~=9.0.3",
  "pytest-cov>=7.0.0",
  "pytest-ordering>=0.6,<0.7",
  "black~=26.5",
  "autopep8>=2.0.0,<3",
  "ipdb>=0.13.0,<0.14",
  "mypy>=2.1.0,<3",
  "ruff>=0.12.0,<0.13",
  "types-pyyaml>=6.0.12.20240724,<7",
  "types-pytz>=2026.2.0.20260518,<2027",
  "sqlacodegen==3.0.0rc5",
  "pre-commit>=4.3.0,<5",
  "poethepoet>=0.37.0",
]
release = ["python-semantic-release>=10.3.1,<11"]
aws = ["mangum>=0.17.0,<0.18"]

[tool.uv]
default-groups = ["dev", "release", "aws"]

[[tool.uv.index]]
name = "proxy-source"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"


[tool.hatch.build.targets.sdist]
include = ["src/axionara"]

[tool.hatch.build.targets.wheel]
include = ["src/axionara"]

[tool.hatch.build.targets.wheel.sources]
"src/axionara" = "axionara"


[tool.poe]
include = "poe_tasks.toml"


[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
